[project]
name = "livekit-agent"
version = "0.1.0"
description = "LiveKit example voice agent"
requires-python = ">=3.12,<3.13"
dependencies = [
  "livekit-agents[openai,silero,deepgram,cartesia,turn-detector]~=1.5",
  "exa-py>=2.8,<3",
  "prefactor-livekit>=0.1.1,<0.2",
  "python-dotenv>=1.0,<2",
]

[tool.uv]
package = false
